# call-summarizer-playground

./: LICENSE  README.md  pyproject.toml
app/: main.py
