[tool.poetry]
name = "call-summarizer-playground"
version = "0.1.0"
description = ""
authors = ["Gaurav Bhagwat <bhagwat.gv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
